--- a/src/locales/en/msg.json
+++ b/src/locales/en/msg.json
@@ -1,1 +1,3 @@
-{}
+{
+  "link_profile_tooltip": "This widget links directly to your public profile so that you can easily share your impact with your customers. Turn it off here if you do not want the badge to link to it."
+}
